--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </section>
     <!--Fechar Projetos-->
 
-    <div class="carousel-wrapper">
+    <!--div class="carousel-wrapper">
         <section id="tech-carousel-section">
             <div class="carousel">
                 <i class="fab fa-html5 icon" title="HTML5"></i>
@@ -248,7 +248,7 @@
                 <i class="fab fa-windows icon" title="Windows"></i>
             </div>
         </section>
-    </div>
+</div-->
 
     <!--Footer-->
     <footer id="footer">
