--- a/curriculo.html
+++ b/curriculo.html
@@ -56,7 +56,10 @@
             <section class="skills">
                 <h3></h3>
                 <ul>
-                    <a href="curriculo_pdf.php" target="_blank" class="btn-pdf">
+                    <!--a href="curriculo_pdf.php" target="_blank" class="btn-pdf">
+                        <i class="fa-solid fa-file-pdf"></i> Gerar PDF
+                </a-->
+                    <a href="./img/curriculo_agnaldo.pdf" target="_blank" class="btn-pdf">
                         <i class="fa-solid fa-file-pdf"></i> Gerar PDF
                     </a>
                 </ul>
@@ -117,5 +120,6 @@
     </div>
 
 </body>
+
 
 </html>
