--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!--Fechar Footer-->
 
     <!--Botão WhatsApp-->
-    <a href="https://wa.me/5511972164906" class="whatsapp-float" target="_blank" title="Fale Agnaldo no WhatsApp">
+    <a href="https://wa.me/5511972164906" class="whatsapp-float" target="_blank" title="Fale com Agnaldo no WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
