--- a/curriculo.html
+++ b/curriculo.html
@@ -48,7 +48,7 @@
                 <ul>
                     <li>Diagnóstico e solução de problemas técnicos</li>
                     <li>Pensamento lógico e analítico</li>
-                    <li>Desenho e estruturação de sistemas</li>
+                    <li>Mapeamento de Processos e Sugestão de Melhorias de Usabilidade</li>
                     <li>Análise de dados para suporte e decisões</li>
                     <li>Comunicação eficaz com usuários e equipes</li>
                 </ul>
@@ -123,3 +123,4 @@
 
 
 </html>
+
