--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 ativa com o usuário e na vontade constante de melhorar processos.
 
                 Nos bastidores de cada atendimento, estou ali: traduzindo o “tecniquês”, descomplicando o que parece
-                complicado e buscando não só resolver, mas antecipar dores. Tenho conecimento com redes,
+                complicado e buscando não só resolver, mas antecipar soluçoes. Tenho conhecimento com redes,
                 sistemas, softwares e manutenção, mas o que me diferencia é a forma como aplico esse conhecimento: com
                 empatia, agilidade e foco em entregar valor real para quem está do outro lado da tela.
             </p>
