--- a/curriculo.html
+++ b/curriculo.html
@@ -16,10 +16,10 @@
         <!-- Coluna Esquerda -->
         <aside class="left-column">
             <div class="profile-photo">
-                <img src="img/guinass.png" alt="Foto de Perfil">
+                <img src="img/guina.png" alt="Foto de Perfil">
             </div>
             <h1 class="name">Agnaldo D Moraes</h1>
-            <h2 class="role">Analista Suporte</h2>
+            <h2 class="role">Analista Sistema T.I</h2>
 
             <section class="contact">
                 <h3>Detalhes de Contato</h3>
@@ -46,22 +46,24 @@
             <section class="skills">
                 <h3>Habilidades</h3>
                 <ul>
-                    <li>Diagnóstico e solução de problemas técnicos</li>
-                    <li>Pensamento lógico e analítico</li>
-                    <li>Mapeamento de Processos e Sugestão de Melhorias de Usabilidade</li>
-                    <li>Análise de dados para suporte e decisões</li>
-                    <li>Comunicação eficaz com usuários e equipes</li>
+                    <li>Suporte a sistemas corporativos: identificação, análise e resolução de problemas técnicos</li>
+                    <li>Raciocínio lógico e analítico para interpretação de dados e tomada de decisões</li>
+                    <li>Mapeamento de processos e proposição de melhorias para otimização da usabilidade</li>
+                    <li>Testes de sistemas e acompanhamento de implantações, garantindo conformidade com requisitos</li>
+                    <li>Treinamento e capacitação de usuários para utilização eficiente das soluções</li>
+                    <li>Comunicação clara e eficaz com usuários e equipes técnicas, facilitando a resolução de problemas
+                    </li>
                 </ul>
             </section>
             <section class="skills">
                 <h3></h3>
                 <ul>
-                    <!--a href="curriculo_pdf.php" target="_blank" class="btn-pdf">
-                        <i class="fa-solid fa-file-pdf"></i> Gerar PDF
-                </a-->
-                    <a href="./img/curriculo_agnaldo.pdf" target="_blank" class="btn-pdf">
+                    <a href="curriculo_pdf.php" target="_blank" class="btn-pdf">
                         <i class="fa-solid fa-file-pdf"></i> Gerar PDF
                     </a>
+                    <!--<a href="./img/curriculo_agnaldo.pdf" target="_blank" class="btn-pdf">
+                        <i class="fa-solid fa-file-pdf"></i> Gerar PDF
+                    </a>-->
                 </ul>
             </section>
         </aside>
@@ -70,11 +72,12 @@
         <main class="right-column">
             <section class="summary">
                 <h3>Resumo</h3>
-                <p class="resumo">Analista de Suporte com sólida experiência em atendimento ao usuário, diagnóstico e
-                    resolução de problemas técnicos, manutenção de hardware e software, e administração de sistemas.
-                    Hábil na análise de incidentes, configuração de redes e suporte remoto e presencial, sempre
-                    priorizando a agilidade e a qualidade no atendimento. Proativo, com forte capacidade de comunicação
-                    e foco em soluções eficientes que assegurem a continuidade das operações e a satisfação do cliente.
+                <p class="resumo">Sou um profissional de TI focado em sistemas corporativos, com experiência em suporte
+                    funcional, testes, implantação de sistemas e treinamentos de usuários. Gosto de transformar
+                    problemas em soluções práticas, garantindo que as ferramentas utilizadas no dia a dia funcionem de
+                    forma eficiente e intuitiva.
+                    Tenho perfil proativo, comunicativo e orientado a resultados, sempre buscando melhorar processos,
+                    facilitar a rotina dos usuários e contribuir para o sucesso das operações da empresa.
                 </p>
             </section>
 
@@ -82,18 +85,23 @@
                 <h3>Experiência Profissional</h3>
 
                 <div class="job">
-                    <h4>Analista de T.I - Monica Sanches Bolsas e Acessorios Ltda </h4>
+                    <h4>Analista Sistema T.I - Monica Sanches Bolsas e Acessorios Ltda </h4>
                     <span class="period">2012 - Atual</span>
                     <ul>
-                        <li>Implantação e configuração de PDV (Ponto de Venda) nas lojas da rede, com treinamento para
-                            usuários finais.</li>
-                        <li>Suporte ao sistema de gestão GESTOR (CIGAM) e manutenção de estações Windows (7 a 11).</li>
-                        <li>Manutenção e configuração de computadores e impressoras térmicas e convencionais.</li>
-                        <li>Administração de servidores Linux Debian 12 e Ubuntu Server desenvolvidos internamente.</li>
-                        <li>Gerenciamento de servidores de arquivos com Active Directory, VPN e servidores de
-                            aplicativos web via Apache2.</li>
-                        <li>Desenvolvimento de aplicações web em PHP com bancos de dados PostgreSQL e MySQL.</li>
-                        <li>Criação e manutenção de rotinas de backup para sistemas e aplicações.</li>
+                        <li>Implantação e configuração de sistemas de PDV (Ponto de Venda) em lojas da rede, incluindo
+                            treinamento de usuários.</li>
+                        <li>Suporte ao sistema de gestão GESTOR (CIGAM) Retaguarda e Frente de Loja.</li>
+                        <li>Configuração e preparação de computadores para operação funcional de sistemas Gestao de
+                            Vendas, garantindo desempenho e compatibilidade.</li>
+                        <li>Configuração impressoras (térmicas,convencionais e fiscal).</li>
+                        <li>Administração de servidores Linux (Debian 12 e Ubuntu Server) local.
+                        </li>
+                        <li>Gestao de servidores de arquivos com Active Directory, VPNs e servidores web com
+                            Apache2.</li>
+                        <li>Customização e manutenção básica de aplicações web em PHP, com suporte a bancos de dados
+                            PostgreSQL e MySQL.</li>
+                        <li>Criação e manutenção de rotinas de backup para bancos de dados PostgreSQL e MySQL,
+                            garantindo a segurança e integridade das informações.</li>
                     </ul>
                 </div>
 
@@ -123,4 +131,3 @@
 
 
 </html>
-
