--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
     <!--Header-->
     <header id="header" class="max-width">
         <div class="header_left">
-            <h1>Ola! Sou Agnaldo Analista de Suporte</h1>
+            <h1>Ola! Sou Agnaldo Analista Sistema T.I</h1>
             <p>
-                Sou Analista de Suporte com experiência em atendimento técnico, resolução de problemas e manutenção de
-                sistemas, garantindo o bom funcionamento das operações e a satisfação do usuário. Tenho habilidade para
-                diagnosticar e solucionar incidentes, configurar softwares, orientar usuários e acompanhar chamados até
-                sua resolução.
+                Sou um profissional de TI focado em sistemas corporativos, com experiência em suporte
+                funcional, testes, implantação de sistemas e treinamentos de usuários. Gosto de transformar
+                problemas em soluções práticas, garantindo que as ferramentas utilizadas no dia a dia funcionem de
+                forma eficiente e intuitiva.
+                Tenho perfil proativo, comunicativo e orientado a resultados, sempre buscando melhorar processos,
+                facilitar a rotina dos usuários e contribuir para o sucesso das operações da empresa.
             </p>
             <a href="#about" class="btn btn-primary btn-sm">Saiba Mais!</a>
             <a href="curriculo.html" class="btn btn-success btn-sm" target="_blank">Gerar CV</a>
@@ -100,7 +102,7 @@
 
         <div class="about_rigth">
             <h3 class="tertiary-title mb-m">
-                Analista de Suporte apaixonado por tecnologias e solucoes inteligentes
+                Analista de Sistema T.I apaixonado por tecnologias e solucoes inteligentes
             </h3>
             <p>
                 Sou Agnaldo, Analista de Suporte com olhar humano e mente inquieta por soluções. Minha paixão por
