mensagem do commit

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="openModal" data-title="LinkedIn"
+                    <!--a href="" class="openModal" data-title="LinkedIn"
                         data-desc="No LinkedIn mantenho meu perfil profissional com experiências, certificações e conexões na área de suporte e TI.">
+                        <img src="assets/linkedin.svg" alt="Linkedin">
+                    </a-->
+                    <a href="https://www.linkedin.com/in/agnaldo-d-moraes-81201279/" target="_blank"
+                        rel="noopener noreferrer">
                         <img src="assets/linkedin.svg" alt="Linkedin">
                     </a>
                 </li>
@@ -272,8 +276,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="openModal" data-title="LinkedIn"
+                    <!--a href="#" class="openModal" data-title="LinkedIn"
                         data-desc="No LinkedIn mantenho meu perfil profissional com experiências, certificações e conexões na área de suporte e TI.">
+                        <img src="assets/linkedin.svg" alt="Linkedin">
+                    </a-->
+                    <a href="https://www.linkedin.com/in/agnaldo-d-moraes-81201279/" target="_blank"
+                        rel="noopener noreferrer">
                         <img src="assets/linkedin.svg" alt="Linkedin">
                     </a>
                 </li>
