mensagem do commit

--- a/curriculo.html
+++ b/curriculo.html
@@ -30,19 +30,19 @@
 
             <section class="education">
                 <h3>Educação</h3>
-                <p><strong>Gestao T.I</strong><br>
+                <p><img src="./img/usf.png" alt="Universidade USF" style="width: 23px;"><strong> Gestao T.I</strong><br>
                     USF<br>
                     2009 - 2011
                 </p>
             </section>
             <section class="education">
                 <h3>Educação</h3>
-                <p><strong>Ciencia da Computacao</strong><br>
+                <p><img src="./img/anhanguera.png" alt="Faculdade Anhanguera" style="width: 20px;"><strong> Ciencia da
+                        Computacao</strong><br>
                     Anhanguera<br>
                     2013 - 2016
                 </p>
             </section>
-
             <section class="skills">
                 <h3>Habilidades</h3>
                 <ul>
