--- a/index.html
+++ b/index.html
@@ -109,18 +109,19 @@
                 Analista de Sistema T.I apaixonado por tecnologias e solucoes inteligentes
             </h3>
             <p>
-                Sou Agnaldo, Analista de Suporte com olhar humano e mente inquieta por soluções. Minha paixão por
-                tecnologia vai além de máquinas e sistemas — ela vive na curiosidade por entender o problema, na escuta
-                ativa com o usuário e na vontade constante de melhorar processos.
-
-                Nos bastidores de cada atendimento, estou ali: traduzindo o “tecniquês”, descomplicando o que parece
-                complicado e buscando não só resolver, mas antecipar soluçoes. Tenho conhecimento com redes,
-                sistemas, softwares e manutenção, mas o que me diferencia é a forma como aplico esse conhecimento: com
-                empatia, agilidade e foco em entregar valor real para quem está do outro lado da tela.
+                Sou Agnaldo, Analista de Sistemas de T.I. com olhar humano e mente inquieta por soluções. Minha paixão
+                por tecnologia vai além de máquinas e sistemas — ela se manifesta na curiosidade por entender processos,
+                na escuta ativa com os usuários e na busca constante por melhorias nos sistemas corporativos. Nos
+                bastidores de cada operação, estou ali: traduzindo o “tecniquês”, descomplicando processos complexos e
+                garantindo que os sistemas funcionem de forma eficiente e intuitiva.
+                Tenho experiência com servidores, bancos de dados, aplicações web e manutenção de sistemas, mas o que me
+                diferencia é a forma como aplico esse conhecimento: com empatia, agilidade e foco em entregar valor real
+                para quem depende das soluções tecnológicas.
             </p>
+
             <p>
-                Se o suporte é o elo entre o usuário e a tecnologia, meu papel é garantir que essa ponte seja segura,
-                fluida e confiável.
+                Meu objetivo é garantir que os sistemas corporativos sejam confiáveis, funcionais e continuamente
+                aprimorados, proporcionando experiências eficientes para usuários e equipes.
             </p>
         </div>
     </section>
@@ -150,7 +151,8 @@
                         <img src="assets/srvubuntu.png" alt="WEB Server">
                     </div>
                     <h3>Servidor Web</h3>
-                    <p>Além do suporte técnico, também tenho ampliado minha atuação com desenvolvimento Full Stack,
+                    <p>Além do suporte em sistemas, também tenho ampliado minha atuação com desenvolvimento Full Stack
+                        PHP e JavaScript,
                         bancos de dados (MySQL e PostgreSQL) e servidores web — aprendendo na prática como integrar e
                         manter ambientes eficientes, seguros e funcionais</p>
                 </li>
@@ -160,7 +162,8 @@
                     </div>
                     <h3>Data Base Mysql</h3>
                     <p>Conhecimento em bancos de dados relacionais, com foco em MySQL e PostgreSQL. Apesar da
-                        experiência ainda em construção, já aplico comandos, consultas e rotinas básicas em contextos
+                        experiência ainda em construção, já aplico comandos, consultas e rotinas intermediarias em
+                        contextos
                         reais e de aprendizado contínuo.</p>
                 </li>
                 <li class="skills_item">
@@ -168,9 +171,11 @@
                         <img src="assets/php.png" alt="Sistemas WEB">
                     </div>
                     <h3>Desenvolvimento WEB</h3>
-                    <p>Embora minha experiência principal esteja no suporte técnico, também venho me dedicando ao
-                        desenvolvimento Full Stack, explorando tecnologias modernas e participando de projetos que
-                        ampliam minha visão técnica.</p>
+                    <p>
+                        Embora minha função principal seja como Analista de Sistemas de T.I., venho desenvolvendo
+                        projetos paralelos em PHP e JavaScript, com o objetivo de consolidar e aprimorar meus
+                        conhecimentos em desenvolvimento de programação.
+                    </p>
                 </li>
             </ul>
         </div>
