mensagem do commit

--- a/curriculo.html
+++ b/curriculo.html
@@ -23,7 +23,7 @@
 
             <section class="contact">
                 <h3>Detalhes de Contato</h3>
-                <p><i class="fa-solid fa-envelope"></i> <a href="mailto:adguina@email.com">adguina@email.com</a></p>
+                <p><i class="fa-solid fa-envelope"></i> <a href="mailto:adguina@email.com">adguina@gmail.com</a></p>
                 <p><i class="fa-solid fa-phone"></i> (11) 97216-4906</p>
                 <p><i class="fa-solid fa-location-dot"></i> Itatiba - SP</p>
             </section>
